testsuite/tests/rename/should_fail/T15957_Fail.stderr

T15957_Fail.hs:7:6: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:8:9: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:9:12: error: [GHC-15932] [-Wredundant-record-wildcards (in -Wall), Werror=redundant-record-wildcards]
    Record wildcard does not bind any new variables
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:11:11: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:12:16: error: [GHC-15932] [-Wredundant-record-wildcards (in -Wall), Werror=redundant-record-wildcards]
    Record wildcard does not bind any new variables
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:13:15: error: [GHC-15932] [-Wredundant-record-wildcards (in -Wall), Werror=redundant-record-wildcards]
    Record wildcard does not bind any new variables
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:20:9: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:25:9: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’

T15957_Fail.hs:31:18: error: [GHC-83475] [-Wunused-record-wildcards (in -Wall), Werror=unused-record-wildcards]
    No variables bound in the record wildcard match are used
    Suggested fix: Omit the ‘..’
